--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -31,15 +31,15 @@ jobs:
 #           script: ./gradlew connectedCheck
       # Run the Firebase Test Lab Action
 
-      - name: Generate APK
-        run: ./gradlew clean assembleDebug
-      - name: Rename APK
-        run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/botaprarodar.apk
-      - name: Upload APK
-        uses: actions/upload-artifact@v1
-        with:
-          name: APK generated
-          path: app/build/outputs/apk/debug/botaprarodar.apk
+#      - name: Generate APK
+#        run: ./gradlew clean assembleDebug
+#      - name: Rename APK
+#        run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/botaprarodar.apk
+#      - name: Upload APK
+#        uses: actions/upload-artifact@v1
+#        with:
+#          name: APK generated
+#          path: app/build/outputs/apk/debug/botaprarodar.apk
 
   apk:
     name: Generate APK
@@ -62,7 +62,7 @@ jobs:
         #env:
           #ZTM_API_KEY: ${{ secrets.ZTM_API_KEY }}
       - name: Rename APK
-          run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/botaprarodar.apk
+        run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/botaprarodar.apk
       - name: Upload app APK
         uses: actions/upload-artifact@v1
         with:
