--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -11,6 +11,12 @@ jobs:
     name: Decode google-services.json
     runs-on: ubuntu-18.04
     steps:
+      - name: Checkout project
+        uses: actions/checkout@v2
+          - name: SetUp Java
+            uses: actions/setup-java@v1.4.3
+            with:
+              java-version: 1.8
       - name: Decode google-services.json
         env:
           FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
@@ -21,12 +27,12 @@ jobs:
     needs: decode
     runs-on: macos-latest
     steps:
-      - name: Checkout project
-        uses: actions/checkout@v2
-      - name: SetUp Java
-        uses: actions/setup-java@v1.4.3
-        with: 
-          java-version: 1.8
+      #- name: Checkout project
+      #  uses: actions/checkout@v2
+      #- name: SetUp Java
+      #  uses: actions/setup-java@v1.4.3
+      #  with:
+      #    java-version: 1.8
       
       #- name: Decode google-services.json
       #  env:
