--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -11,12 +11,6 @@ jobs:
     name: Decode google-services.json
     runs-on: ubuntu-18.04
     steps:
-      - name: Checkout project
-        uses: actions/checkout@v2
-          - name: SetUp Java
-            uses: actions/setup-java@v1.4.3
-            with:
-              java-version: 1.8
       - name: Decode google-services.json
         env:
           FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
@@ -27,17 +21,17 @@ jobs:
     needs: decode
     runs-on: macos-latest
     steps:
-      #- name: Checkout project
-      #  uses: actions/checkout@v2
-      #- name: SetUp Java
-      #  uses: actions/setup-java@v1.4.3
-      #  with:
-      #    java-version: 1.8
+      - name: Checkout project
+        uses: actions/checkout@v2
+      - name: SetUp Java
+        uses: actions/setup-java@v1.4.3
+        with:
+          java-version: 1.8
       
-      #- name: Decode google-services.json
-      #  env:
-      #    FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
-      #  run: echo $FIREBASE_SECRET_DEV > app/google-services.json
+      - name: Decode google-services.json
+        env:
+          FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
+        run: echo $FIREBASE_SECRET_DEV > app/google-services.json
       - name: Run unit tests
         run: ./gradlew clean test
 
@@ -54,10 +48,10 @@ jobs:
           java-version: 1.8
 
       #Decodificando google-services
-      #- name: Decode google-services.json
-      #  env:
-      #    FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
-      #  run: echo $FIREBASE_SECRET_DEV > app/google-services.json
+      - name: Decode google-services.json
+        env:
+          FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
+        run: echo $FIREBASE_SECRET_DEV > app/google-services.json
       #Gerando APK
       - name: Assemble app debug APK
         run: bash ./gradlew clean assembleDebug --stacktrace
