--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,13 @@ android {
         versionName "2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
-
-        buildConfigField "String", "BASE_URL", "\"https://bpr-dev.firebaseio.com\""
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            buildConfigField "String", "BASE_URL", "\"https://bpr-production.firebaseio.com\""
         }
 
         debug {
@@ -29,6 +29,8 @@ android {
             multiDexEnabled true
             shrinkResources false
             useProguard false
+
+            buildConfigField "String", "BASE_URL", "\"https://bpr-dev.firebaseio.com\""
         }
     }
 
