--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         </activity>
         <activity android:name=".presentation.fullscreenimage.FullscreenImageActivity">
         </activity>
+        <activity android:name=".presentation.authentication.AuthenticationActivity">
+        </activity>
         <activity
                 android:name=".presentation.main.MainActivity"
                 android:label="@string/app_name">
