--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -24,67 +24,67 @@ jobs:
         run: ./gradlew clean test
 
 #### As etapas abaixo foram desabilitadas momentaneamente até as correcoes nos testes de UI ####
-#  apk:
-#    name: Generate APK
-#    runs-on: ubuntu-18.04
-#
-#    steps:
-#      - uses: actions/checkout@v1
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
-#
-#      #Decodificando google-services
-#      - name: Decode google-services.json
-#        env:
-#          FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
-#        run: echo $FIREBASE_SECRET_DEV > app/google-services.json
-#      #Gerando APK
-#      - name: Assemble app debug APK
-#        run: bash ./gradlew clean assembleDebug --stacktrace
-#      - name: Rename APK
-#        run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/botaprarodar.apk
-#      - name: Upload app APK
-#        uses: actions/upload-artifact@v1
-#        with:
-#          name: botaprarodar
-#          path: app/build/outputs/apk/debug/botaprarodar.apk
-#      #Gerado APK para testes instrumentados
-#      - name: Assemble Android Instrumentation Tests
-#        run: bash ./gradlew assembleDebugAndroidTest
-#      - name: Upload Android Test APK
-#        uses: actions/upload-artifact@v1
-#        with:
-#          name: app-debug-androidTest
-#          path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
-#
-#  firebase:
-#    name: Run UI tests with Firebase Test Lab
-#    needs: apk
-#    runs-on: ubuntu-18.04
-#
-#    steps:
-#      - uses: actions/checkout@v1
-#
-#      - name: Download app APK
-#        uses: actions/download-artifact@v1
-#        with:
-#          name: botaprarodar
-#
-#      - name: Download Android test APK
-#        uses: actions/download-artifact@v1
-#        with:
-#          name: app-debug-androidTest
-#
-#      - name: Login to Google Cloud
-#        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-#        with:
-#          version: '270.0.0'
-#          service_account_key: ${{ secrets.GCLOUD_AUTH }}
-#
-#      - name: Set current project
-#        run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
-#
-#      - name: Run Instrumentation Tests in Firebase Test Lab
-#        run: gcloud firebase test android run --type instrumentation --app botaprarodar/botaprarodar.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=pl,orientation=portrait
+  apk:
+    name: Generate APK
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      #Decodificando google-services
+      - name: Decode google-services.json
+        env:
+          FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
+        run: echo $FIREBASE_SECRET_DEV > app/google-services.json
+      #Gerando APK
+      - name: Assemble app debug APK
+        run: bash ./gradlew clean assembleDebug --stacktrace
+      - name: Move and rename APK
+        run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/botaprarodar.apk
+      - name: Upload app APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: botaprarodar
+          path: app/build/outputs/apk/debug/botaprarodar.apk
+      #Gerado APK para testes instrumentados
+      - name: Assemble Android Instrumentation Tests
+        run: bash ./gradlew assembleDebugAndroidTest
+      - name: Upload Android Test APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-debug-androidTest
+          path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
+
+  firebase:
+    name: Run UI tests with Firebase Test Lab
+    needs: apk
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Download app APK
+        uses: actions/download-artifact@v1
+        with:
+          name: botaprarodar
+
+      - name: Download Android test APK
+        uses: actions/download-artifact@v1
+        with:
+          name: app-debug-androidTest
+
+      - name: Login to Google Cloud
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '270.0.0'
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+
+      - name: Set current project
+        run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
+
+      - name: Run Instrumentation Tests in Firebase Test Lab
+        run: gcloud firebase test android run --type instrumentation --app botaprarodar/botaprarodar.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=pl,orientation=portrait
