--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -87,4 +87,11 @@ jobs:
         run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
 
       - name: Run Instrumentation Tests in Firebase Test Lab
-        run: gcloud firebase test android run --type instrumentation --app botaprarodar/botaprarodar.apk --test app-debug-androidTest/app-debug-androidTest.apk --device model=Pixel2,version=28,locale=pt_BR,orientation=portrait
+        run: gcloud firebase test android run \
+          --type instrumentation \
+          --test app-debug-androidTest/app-debug-androidTest.apk \
+          --app botaprarodar/botaprarodar.apk \
+          --device model=Pixel2,version=29,locale=pt_BR,orientation=portrait \
+          --use-orchestrator \
+          --environment-variables clearPackageData=true
+
