--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 
     defaultConfig.vectorDrawables.useSupportLibrary = true
 
-    testOptions{
+    testOptions {
         unitTests {
             includeAndroidResources = true
             returnDefaultValues = true
@@ -66,7 +66,9 @@ dependencies {
     // Test
     testImplementation 'junit:junit:4.13.1'
     testImplementation "io.mockk:mockk:$mockk_version"
+
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.3.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
