--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
                 android:name=".presentation.main.MainActivity"
                 android:label="@string/app_name">
         </activity>
-        <activity android:name=".presentation.adduser.AddUserActivity">
+        <activity android:name=".presentation.userForm.UserFormActivity">
         </activity>
 
         <provider
