--- a/.github/actions/unit_tests.yml
+++ b/.github/actions/unit_tests.yml
@@ -1,5 +1,8 @@
 name: Unit Tests
+  description: 'Execute app unit tests'
   runs-on: macos-latest
+runs:
+  using: "composite"
   steps:
     - name: Checkout project
       uses: actions/checkout@v2
