--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -7,19 +7,7 @@ on:
     branches: [ main, development ]
 jobs:
   build:
-    name: Tests Unitaires
+    name: Unit Tests
     runs-on: macos-latest
     steps:
-      - name: Checkout project
-        uses: actions/checkout@v2
-      - name: SetUp Java
-        uses: actions/setup-java@v1.4.3
-        with:
-          java-version: 1.8
-      
-      - name: Decode google-services.json
-        env:
-          FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
-        run: echo $FIREBASE_SECRET_DEV > app/google-services.json
-      - name: Run unit tests
-        run: ./gradlew clean test
+      - uses: ./.github/actions/unit_tests
