--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -1,7 +1,7 @@
 name: Continuous Integration
 
 on:
-   [pull_request, push]:
+   pull_request, push:
      branches: [main, development, add-semantic-pull-request]
 jobs:
   build:
