--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 
 on:
    pull_request:
-     branches: [main, development, add-semantic-pull-request]
+     branches: [main, development]
 jobs:
   build:
     name: Unit Tests
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
-      - uses: .github/actions/unit_tests
+      - uses: ./.github/actions/unit_tests
 
   apk:
     name: Generate APK
