--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [ main, development, add-semantic-pull-request ]
+    branches: [ main, development]
   pull_request:
     branches: [ main, development ]
 jobs:
