--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -1,8 +1,9 @@
 name: Continuous Integration
 
 on:
-   pull_request:
-     branches: [main, development]
+  pull_request:
+    branches: [ main, development ]
+
 jobs:
   build:
     name: Unit Tests
@@ -10,8 +11,17 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
-      - name: "Run Unit Tests"
-        uses: ./.github/actions/unit_tests
+      - name: SetUp Java
+        uses: actions/setup-java@v1.4.3
+        with:
+          java-version: 1.8
+
+      - name: Decode google-services.json
+        env:
+          FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
+        run: echo $FIREBASE_SECRET_DEV > app/google-services.json
+      - name: Run unit tests
+        run: ./gradlew clean test
 
   apk:
     name: Generate APK
@@ -83,4 +93,3 @@ jobs:
           --device model=Pixel2,version=29,locale=pt_BR,orientation=portrait
           --use-orchestrator
           --environment-variables clearPackageData=true
-
