--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -2,12 +2,20 @@ name: Continuous Integration
 
 on:
   pull_request:
-    branches: [ main, development ]
+    branches: [ main, development, chore/update-ci ]
+
+  push:
+    branches: chore/update-ci
 
 jobs:
   build:
     name: Unit Tests
     runs-on: macos-latest
+    strategy:
+      matrix:
+        api-level: [29]
+        arch: [x86_64]
+
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
