--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.4.0"
+
     implementation project(path: ':toolkit')
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.security:security-crypto:1.1.0-alpha03'
@@ -214,6 +216,15 @@ dependencies {
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.5'
     implementation 'io.coil-kt:coil-compose:1.4.0'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // ViewModel utilities for Compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // LiveData with Compose
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
