--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 31
@@ -84,6 +84,7 @@ android {
 
 dependencies {
     def lifecycle_version = "2.4.0"
+    def kotlin_version = "1.5.31"
 
     implementation project(path: ':toolkit')
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
@@ -202,6 +203,10 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
+    // Lifecycles
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.4.0"
+
     // Jetpack Compose
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.4.0'
@@ -225,6 +230,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // LiveData with Compose
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
 }
 
 apply plugin: 'com.google.gms.google-services'
