--- a/app/build.gradle
+++ b/app/build.gradle
@@ -233,6 +233,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
 
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.0.5"
 }
 
 apply plugin: 'com.google.gms.google-services'
