--- a/.github/workflows/GENERATE_SIGNED_APK_CI.yml
+++ b/.github/workflows/GENERATE_SIGNED_APK_CI.yml
@@ -1,19 +1,33 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Sign APK, Bump Version
+name: Generate Signed APK - Production
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow to Sign APK and Bump Version on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # This workflow contains a single job called "build" and "bump-version"
+
+  bump-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5.4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Version Name file
+        run: echo ${{steps.tag_version.outputs.new_tag}} > version_name.txt
+      - uses: actions/upload-artifact@main
+        with:
+          name: version-name
+          path: version_name.txt
+
+
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -65,20 +79,5 @@ jobs:
 
 
 
-  bump-version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v5.4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create Version Name file
-        run: echo ${{steps.tag_version.outputs.new_tag}} > version_name.txt
-      - uses: actions/upload-artifact@main
-        with:
-          name: version-name
-          path: version_name.txt
 
 
