--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
 
         <activity android:name=".presentation.bikeForm.BikeFormActivity" />
         <activity android:name=".presentation.returnbicycle.ReturnBikeActivity" />
-        <activity android:name=".presentation.components.WithdrawStepper" />
+        <activity android:name=".presentation.components.WithdrawStepperActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
