--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ buildscript {
         okhttp3_version = "3.13.1"
         junit_ext_version = "1.1.3"
         junit_version = "4.13.2"
+        jupiterVersion = "5.9.1"
+
         test_version = "1.4.0"
         compose_version = '1.0.1'
     }
