--- a/.github/workflows/DEV_CI.yml
+++ b/.github/workflows/DEV_CI.yml
@@ -78,11 +78,10 @@ jobs:
         with:
           name: app-debug-androidTest
 
-      - name: Login to Google Cloud
-        uses: google-github-actions/setup-gcloud@main
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
         with:
-          version: '270.0.0'
-          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+          credentials_json: '${{ secrets.GCLOUD_AUTH }}'
 
       - name: Set current project
         run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
