--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
     androidTestUtil 'androidx.test:orchestrator:1.4.0'
     debugImplementation "androidx.fragment:fragment-testing:1.3.6"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // Android Support and Views
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
